# garment-refitting

./: .gitmodules  .polyscope.ini  AGENTS.md  CMakeLists.txt  README.md  imgui.ini  pyproject.toml
data/rand_0AAY3NQH8J/: rand_0AAY3NQH8J_body_measurements.yaml  rand_0AAY3NQH8J_boxmesh.ply  rand_0AAY3NQH8J_design_params.yaml  rand_0AAY3NQH8J_orig_lens.pickle  rand_0AAY3NQH8J_sim.ply  rand_0AAY3NQH8J_sim_segmentation.txt  rand_0AAY3NQH8J_specification.json  rand_0AAY3NQH8J_vertex_labels.yaml
data/rand_0YN1FIW5GU/: rand_0YN1FIW5GU_body_measurements.yaml  rand_0YN1FIW5GU_boxmesh.ply  rand_0YN1FIW5GU_design_params.yaml  rand_0YN1FIW5GU_orig_lens.pickle  rand_0YN1FIW5GU_sim.ply  rand_0YN1FIW5GU_sim_segmentation.txt  rand_0YN1FIW5GU_specification.json  rand_0YN1FIW5GU_vertex_labels.yaml
data/rand_1HX9UGCJ83/: rand_1HX9UGCJ83_body_measurements.yaml  rand_1HX9UGCJ83_boxmesh.ply  rand_1HX9UGCJ83_design_params.yaml  rand_1HX9UGCJ83_orig_lens.pickle  rand_1HX9UGCJ83_sim.ply  rand_1HX9UGCJ83_sim_segmentation.txt  rand_1HX9UGCJ83_specification.json  rand_1HX9UGCJ83_vertex_labels.yaml
data/rand_2CU0AIB2VI/: rand_2CU0AIB2VI_body_measurements.yaml  rand_2CU0AIB2VI_boxmesh.ply  rand_2CU0AIB2VI_design_params.yaml  rand_2CU0AIB2VI_orig_lens.pickle  rand_2CU0AIB2VI_sim.ply  rand_2CU0AIB2VI_sim_segmentation.txt  rand_2CU0AIB2VI_specification.json  rand_2CU0AIB2VI_vertex_labels.yaml
data/rand_2E2EL4UZUS/: rand_2E2EL4UZUS_body_measurements.yaml  rand_2E2EL4UZUS_boxmesh.ply  rand_2E2EL4UZUS_design_params.yaml  rand_2E2EL4UZUS_orig_lens.pickle  rand_2E2EL4UZUS_sim.ply  rand_2E2EL4UZUS_sim_segmentation.txt  rand_2E2EL4UZUS_specification.json  rand_2E2EL4UZUS_vertex_labels.yaml
data/rand_3MX8P0MTR6/: rand_3MX8P0MTR6_body_measurements.yaml  rand_3MX8P0MTR6_boxmesh.ply  rand_3MX8P0MTR6_design_params.yaml  rand_3MX8P0MTR6_orig_lens.pickle  rand_3MX8P0MTR6_sim.ply  rand_3MX8P0MTR6_sim_segmentation.txt  rand_3MX8P0MTR6_specification.json  rand_3MX8P0MTR6_vertex_labels.yaml
data/rand_LDRM8LXNCX/: rand_LDRM8LXNCX_body_measurements.yaml  rand_LDRM8LXNCX_boxmesh.ply  rand_LDRM8LXNCX_design_params.yaml  rand_LDRM8LXNCX_orig_lens.pickle  rand_LDRM8LXNCX_sim.ply  rand_LDRM8LXNCX_sim_segmentation.txt  rand_LDRM8LXNCX_specification.json  rand_LDRM8LXNCX_vertex_labels.yaml
data/rand_ZQFHURJ27G/: rand_ZQFHURJ27G_body_measurements.yaml  rand_ZQFHURJ27G_boxmesh.ply  rand_ZQFHURJ27G_design_params.yaml  rand_ZQFHURJ27G_orig_lens.pickle  rand_ZQFHURJ27G_sim.ply  rand_ZQFHURJ27G_sim_segmentation.txt  rand_ZQFHURJ27G_specification.json  rand_ZQFHURJ27G_vertex_labels.yaml
references/: garment_refitting_implementation_decisions.md  implementation_spec.md
refitting/: __init__.py  binding.py
scripts/: example_data.py  plot_affine_stencil_residuals.py  plot_refitting_movement.py  plot_stencil_sizes.py  visualize_barycentric_reconstruction.py  visualize_body_direction_fields.py  visualize_closest_point_binding.py  visualize_initial_warp.py  visualize_refitting_steps.py  visualize_stencils.py
src/cpp/: geometry_central.cpp
src/refitting/: __init__.py  affine_stencil.py  barycentric.py  binding.py  directional_field.py  geometry_central.py  initial_warp.py  manager.py  rebinding.py  relaxation.py  stencil.py
tests/: example_data.py  test_affine_stencil.py  test_barycentric.py  test_binding.py  test_directional_field.py  test_example_data.py  test_geometry_central.py  test_initial_warp.py  test_manager.py  test_rebinding.py  test_relaxation.py  test_stencil.py
