[project]
name = "refitting"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cholespy>=2.2.0",
    "libigl>=2.6.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "polyscope>=2.6.1",
    "potpourri3d>=1.4.0",
    "pytest>=9.0.3",
    "scipy>=1.17.1",
    "torch>=2.10.0",
]

[build-system]
requires = [
    "libigl>=2.6.2",
    "nanobind>=2.12.0",
    "scikit-build-core>=0.12.2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/refitting"]

[dependency-groups]
dev = [
    "nanobind>=2.12.0",
    "scikit-build-core>=0.12.2",
]
