[project]
name = "refitting"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cholespy>=2.2.0",
    "libigl>=2.6.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "polyscope>=2.6.1",
    "pytest>=9.0.3",
    "torch>=2.10.0",
]

[build-system]
requires = [
    "nanobind>=2.12.0",
    "scikit-build-core>=0.12.2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/refitting"]

[dependency-groups]
dev = [
    "nanobind>=2.12.0",
    "scikit-build-core>=0.12.2",
]
